2.8 crash - "selection to active" with bone selected in pose mode #61051

Closed
opened 2019-01-31 04:32:57 +01:00 by DiscreteChi · 6 comments

Operating system: Windows 10
Graphics card: rtx 2070

Broken: blender-2.80-8c8979067490-win64

Using snap to active while selecting a bone in pose mode results in crash.

  1. Create new default scene with cube
  2. Add bone move next to cube
  3. Select cube in object mode and shift select bone
  4. Enter pose mode with ctrl+tab
  5. Select bone in pose mode
  6. Selection to active from shift+s menu
  7. Crash to desktop

Seems to fail gracefully when attempting to snap to bone selected in edit mode - replace step 4 with an unmodified tab press.

Operating system: Windows 10 Graphics card: rtx 2070 Broken: blender-2.80-8c8979067490-win64 Using snap to active while selecting a bone in pose mode results in crash. 1) Create new default scene with cube 2) Add bone move next to cube 3) Select cube in object mode and shift select bone 4) Enter pose mode with ctrl+tab 5) Select bone in pose mode 6) Selection to active from shift+s menu 7) Crash to desktop Seems to fail gracefully when attempting to snap to bone selected in edit mode - replace step 4 with an unmodified tab press.
Author

Added subscriber: @DiscreteChi

Added subscriber: @DiscreteChi
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Philipp Oeser self-assigned this 2019-01-31 12:54:26 +01:00
Member

ec3357e03a introduced multi-object snapping.
Seems like this was done without mixed-mode selections in mind.

So code assumes that all selected objects are actually armatures [which can fail]
In 2.7 this was not a problem, because code only took active object into account, 2.8 goes over all selected_editable_objects...

I think mixed-mode selections could actually be supported here, but 2.7 obviously did not do that either... simple fix for crash incoming...

ec3357e03a introduced multi-object snapping. Seems like this was done without mixed-mode selections in mind. So code assumes that all selected objects are actually armatures [which can fail] In 2.7 this was not a problem, because code only took active object into account, 2.8 goes over all selected_editable_objects... I think mixed-mode selections could actually be supported here, but 2.7 obviously did not do that either... simple fix for crash incoming...

This issue was referenced by b294600ddc

This issue was referenced by b294600ddcf17183869e61d878f2801efd52d65d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61051
No description provided.